--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,22 @@
 certifi==2018.8.24
+chardet==3.0.4
+defusedxml==0.5.0
 dj-database-url==0.5.0
 Django==2.0.6
+django-allauth==0.38.0
+django-crispy-forms==1.7.2
 gunicorn==19.9.0
+idna==2.7
+oauthlib==2.1.0
 pipenv==2018.7.1
 psycopg2==2.7.5
 python-decouple==3.1
+python3-openid==3.1.0
 pytz==2018.4
+requests==2.20.1
+requests-oauthlib==1.0.0
+urllib3==1.24.1
 virtualenv==16.0.0
 virtualenv-clone==0.3.0
 whitenoise==4.1
+
